<resources>
    <string name="app_name">KitchenGo Statistic</string>
    <string name="main_title">KitchenGo Premium Statistic</string>
    <string name="error_match_mac">Please run it in bematech device.</string>
    <string name="error">Error</string>
    <string name="question">Question</string>
    <string name="menu_settings">Settings</string>
    <string name="dialog_date_picker">Date</string>
    <string name="dialog_time_picker">Time</string>
    <string name="daily_report">Daily report</string>
    <string name="weekly_report">Weekly report</string>
    <string name="monthly_report">Monthly report</string>
    <string name="one_time_report">One Time report</string>
    <string name="report_arrangement_full_date_range">Full date range</string>
    <string name="report_arrangement_per_month">Per month</string>
    <string name="report_arrangement_per_week">Per week</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_general_enable_auto_report">Enable auto generate report</string>
    <string name="pref_general_enable_auto_report">Auto generate report</string>
    <string name="pref_title_database_keep_days">Number of days to keep data</string>
    <string name="pref_general_port">TCP/IP port</string>
    <string name="pref_general_station_statistic_port">Station TCP/IP port</string>
    <string name="pref_title_auto_report_type">Auto report type</string>
    <string-array name="pref_general_auto_report_list_titles">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string name="pref_header_database">Database</string>
    <string name="about">About</string>
    <string name="item_data_mode_average_time">Average item bump time</string>
    <string name="item_data_mode_counter">Item counter per period</string>
    <string name="dialog_item_picker">Choose item</string>
    <string name="order_report_content_counter">Order Count</string>
    <string name="order_report_content_prep_time">Order Prep Time</string>
    <string name="order_report">Order Report</string>
    <string name="item_report">Item Report</string>
    <string name="refresh_stations">Refresh Stations List</string>
    <string name="collect_db">Collect data</string>
    <string name="display_report">Display Report</string>
    <string name="save">Save</string>
    <string name="save_profile">Save Profile</string>
    <string name="load_profile">Load Profile</string>
    <string name="total_orders_count">Total Order Count:</string>
    <string name="total_prep_time">Total Order Prep Time:</string>
    <string name="average_orders_per_timeslot">Average orders/time slot:</string>
    <string name="average_prep_time">Average Order Prep Time:</string>
    <string name="information_date">Date:</string>
    <string name="information_time_from">Time from</string>
    <string name="information_time_to">to</string>
    <string name="information_from_date">From date:</string>
    <string name="information_to_date">To date:</string>
    <string name="information_date_from">Date from</string>
    <string name="information_date_to">to</string>
    <string name="total_mins">Total(mins)</string>
    <string name="total">Total</string>
    <string name="mins">mins</string>
    <string name="hour_1">1 hr</string>
    <string name="hours_8">8 hrs</string>
    <string name="hours_12">12 hrs</string>
    <string name="mins_15">15 mins</string>
    <string name="mins_30">30 mins</string>
    <string name="pref_general_station_from">Station from</string>
    <string name="pref_general_station_to">Station to</string>
    <string name="keep_data">Keep data</string>
    <string name="days">days</string>
    <string name="dialog_profile_name">Input file name</string>
    <string name="dialog_profile_select">Select profile</string>
    <string name="display_report_first">Please display report first.</string>
    <string name="waiting_collecting">Collecting data from stations…</string>
    <string name="collecting">KitchenGo Statistic is collecting data, please wait.</string>
    <string name="no_station">No valid station..</string>
    <string name="check_new_version">Check new version</string>
    <string name="current_version">Current version</string>
    <string name="it_is_latest_version">It is latest version</string>
    <string name="update_canceled">Updating canceled</string>
    <string name="found_new_version">Found new version</string>
    <string name="update_now">Upgrade now</string>
    <string name="update_later">Later</string>
    <string name="update">Upgrade</string>
    <string name="checking">Checking ...</string>
    <string name="update_error_download_error">Errors while downloading apk file</string>
    <string name="update_error_download_apk_error">Can not download apk file</string>
    <string name="update_error_apk_error">The apk file is wrong</string>
    <string name="update_error_xml_error">Can not download updating file</string>
    <string name="do_you_update">There is new version. Do you want to upgrade it now?</string>
    <string name="invalid_update_file">Invalid update file</string>
    <string name="update_new_version">New version: #, recommended rate: $</string>
    <string name="file_name">File name</string>
    <string name="all">All</string>
    <string name="choose_item">Choose item</string>
    <string name="find">Find</string>
    <string name="remove">Remove</string>
    <string name="from_station">From station</string>
    <string name="to_station">To station</string>
    <string name="report_type">Report type</string>
    <string name="report_content">Report content</string>
    <string name="time_slots">Time slots</string>
    <string name="item_data_mode">Item data mode</string>
    <string name="select_item">Input item</string>
    <string name="item">Item</string>
    <string name="date_from">Date from</string>
    <string name="date">Date</string>
    <string name="date_to">Date to</string>
    <string name="day_of_the_week">Day of the week</string>
    <string name="arrange_reports">arrange_reports</string>
    <string name="time_from">Time from</string>
    <string name="time_to">Time to</string>
    <string name="report">Report</string>
    <string name="time">Time</string>
    <string name="auto_report_timeslot_from">Auto report timeslot from</string>
    <string name="auto_report_timeslot_to">Auto report timeslot to</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="jan">Jan.</string>
    <string name="feb">Feb.</string>
    <string name="mar">Mar.</string>
    <string name="apr">Apr.</string>
    <string name="may">May</string>
    <string name="jun">Jun.</string>
    <string name="jul">Jul.</string>
    <string name="aug">Aug.</string>
    <string name="sep">Sep.</string>
    <string name="oct">Oct.</string>
    <string name="nov">Nov.</string>
    <string name="dec">Dec.</string>
    <string name="to_station_to_less_than_from_station">[To station] is less than [From station].</string>
    <string name="time_to_less_than_time_from">[Time to] is less than [Time from].</string>
    <string name="date_to_less_than_date_from">[Date to] is less than [Date from].</string>
    <string name="station_lost">Station # lost.</string>
    <string name="station_restored">Station # restored.</string>
    <string name="transfering_db_to_other_router">Transfering database to other.</string>
    <string name="updating_my_db_from_other_router">Updating my database from other.</string>
    <string name="waiting_for_config_data">Waiting for config data...</string>
    <string name="waiting_for_new_connection">Waiting for new connection...</string>
    <string name="station_is_not_active">Station is not active...</string>
    <string name="waiting_for_connecting">Waiting for connecting....</string>
    <string name="unknown">Unknown</string>
    <string name="active">Active</string>
    <string name="connected">Connected</string>
    <string name="updating">Updating</string>
    <string name="updated">Updated</string>
    <string name="station_disconnected">Station [#] disconnected.</string>
    <string name="pos_connected">POS [#] connected.</string>
    <string name="statistic_report">Statistic report</string>
    <string name="day_of_week">Day of Week</string>
    <string name="day_of_month">Day of Month</string>
    <string name="pref_kds_language">Language</string>
    <string-array name="pref_kds_language_titles">
        <item>English</item>
        <item>Chinese</item>

    </string-array>
    <string name="restart_kds_as_language">A restart is needed in order to change language to #, do you want to change the language and restart now?</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="confirm">Confirm</string>
    <string name="downloading">Downloading ...</string>
    <string name="receive_report">Get report from station #</string>
    <string name="waiting_for_statistic">Waiting for statistic data</string>
    <string name="item_report_content_counter">Item count</string>
    <string name="item_report_content_prep_time">Item prep time</string>
    <string name="total_items_count">Total item Count:</string>
    <string name="total_items_prep_time">Total item Prep Time:</string>
    <string name="average_item_prep_time">Average item Prep Time:</string>
    <string name="order_report_description">Report order count and preparation time in given interval</string>
    <string name="item_report_description">Report item count and preparation time in given interval</string>
    <string name="item_description">Item description</string>
    <string name="no_active_stations">No active stations</string>
    <string name="message">Message</string>
    <string name="done">Done</string>
    <string name="log_mode">Log mode</string>
    <string name="log_reserved_days">Reserve log files for X days</string>
    <string name="real_time_period">Real time report period (mins)</string>
    <string name="graph_duration">Graph duration (hours)</string>
    <string name="graph_axis_x_title">Time</string>
    <string name="graph_axis_y_title">Prep time(mins)</string>
    <string name="station_id">Station ID</string>
    <string name="str_title">Title</string>
    <string name="axis_x_title">Axis X Title</string>
    <string name="axis_y_title">Axis Y Title</string>
    <string name="target_time">Target Time</string>
    <string name="graph_color">Graph color</string>
    <string name="graph_axis_y_color">Graph axis y color</string>
    <string name="enable_selected_cell_background_color">Enable selected cell background color</string>
    <string name="layout_color">Layout color</string>
    <string name="show_border">Show border</string>
    <string name="border_color">Border color</string>
    <string name="target_percent_color">Target percent color</string>
    <string name="real_time_color">Real time color</string>
    <string name="alert_color">Alert color</string>
    <string name="over_target_color">Over target color</string>
    <string name="id">ID</string>
    <string name="ip">IP</string>
    <string name="info">Info</string>
    <string name="grid_cell_color">Choose grid cell background color here</string>
    <string name="pref_kds_general_title">Customized title</string>
    <string name="last_data_as_zero">When no order in last period, display last period data as</string>
    <string name="auto_report_save_to">Save report to</string>
    <string name="auto_report_save_to_remote">Save auto report to remote folder</string>
</resources>