<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="general_auto_report"
        android:summary="@string/pref_general_enable_auto_report"
        android:title="@string/pref_title_general_enable_auto_report" />

    <ListPreference
        android:key="general_auto_report_save_to"
        android:defaultValue="0"
        android:entries="@array/pref_general_auto_report_save_to_titles"
        android:entryValues="@array/pref_general_auto_report_save_to_values"
        android:dependency="general_auto_report"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/auto_report_save_to" />
    <com.bematechus.kdsstatistic.STPreferenceSmbFolder
        android:key="general_report_remote_folder"
        android:title="@string/auto_report_save_to_remote"

        android:positiveButtonText="@string/ok"
        android:negativeButtonText="@string/cancel"
        android:dependency="general_auto_report"

        />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="0"
        android:inputType="number"
        android:key="general_station_from"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:positiveButtonText="@string/ok"
        android:negativeButtonText="@string/cancel"
        android:title="@string/pref_general_station_from" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="5"
        android:inputType="number"
        android:key="general_station_to"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:positiveButtonText="@string/ok"
        android:negativeButtonText="@string/cancel"
        android:title="@string/pref_general_station_to" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_general_auto_report_list_titles"
        android:entryValues="@array/pref_general_auto_report_list_values"
        android:key="general_auto_report_type"
        android:dependency="general_auto_report"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_auto_report_type" />
    <com.bematechus.kdsstatistic.TimePreference
        android:defaultValue="00:00"
        android:dependency="general_auto_report"
        android:key="general_auto_time"
        android:positiveButtonText="@string/ok"
        android:negativeButtonText="@string/cancel"
        android:title="@string/time"
        />
    <com.bematechus.kdsstatistic.TimePreference
        android:defaultValue="00:00"
        android:dependency="general_auto_report"
        android:key="general_auto_timeslot_from"
        android:positiveButtonText="@string/ok"
        android:negativeButtonText="@string/cancel"
        android:title="@string/auto_report_timeslot_from"
        />

    <com.bematechus.kdsstatistic.TimePreference
        android:defaultValue="23:59"
        android:dependency="general_auto_report"
        android:key="general_auto_timeslot_to"
        android:positiveButtonText="@string/ok"
        android:negativeButtonText="@string/cancel"
        android:title="@string/auto_report_timeslot_to"
        />

    <!--&lt;!&ndash; NOTE: EditTextPreference accepts EditText attributes. &ndash;&gt;-->
    <!--&lt;!&ndash; NOTE: EditTextPreference's summary should be set to its value by the activity code. &ndash;&gt;-->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="6000"
        android:inputType="number"
        android:key="tcp_port"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:positiveButtonText="@string/ok"
        android:negativeButtonText="@string/cancel"
        android:title="@string/pref_general_port" />

    <ListPreference
        android:key="kds_general_language"
        android:title="@string/pref_kds_language"
        android:defaultValue="0"
        android:entries="@array/pref_kds_language_titles"
        android:entryValues="@array/pref_kds_language_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <!--<EditTextPreference-->
        <!--android:capitalize="words"-->
        <!--android:defaultValue="6001"-->
        <!--android:inputType="number"-->
        <!--android:key="connect_station_tcp_port"-->
        <!--android:maxLines="1"-->
        <!--android:selectAllOnFocus="true"-->
        <!--android:singleLine="true"-->
        <!--android:title="@string/pref_general_station_statistic_port" />-->
    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

</PreferenceScreen>
