<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.bematechus.kdslib.KDSListPreference
        android:key="log_mode"
        android:title="@string/log_mode"
        android:defaultValue="1"
        android:entries="@array/pref_kds_log_mode_titles"
        android:entryValues="@array/pref_kds_log_mode_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <CheckBoxPreference
        android:key="log_orders"
        android:title="@string/log_orders"
        android:defaultValue="false" />

    <com.bematechus.kdslib.KDSEditTextPreference
        android:key="log_days"
        android:title="@string/log_reserved_days"
        android:defaultValue="3"
        android:selectAllOnFocus="true"
        android:inputType= "number"
        android:capitalize="words"
        android:singleLine="true"
        android:positiveButtonText="@string/ok"
        android:negativeButtonText="@string/cancel"
        android:maxLines="1" />
</PreferenceScreen>