<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/layout_color"
        android:id="@+id/btnColor"
        android:layout_marginBottom="2dp" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_border"
        android:id="@+id/chkShowBorder" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_selected_cell_background_color"
        android:id="@+id/chkCellColor"
        android:layout_gravity="center_vertical" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnCellBG"
        android:layout_margin="2dp"
        android:text="@string/grid_cell_color" />
</LinearLayout>