<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:kdstextview="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal" android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:weightSum="9">
    <com.bematechus.kdslib.KDSTextview
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/id"
        android:layout_weight="1.5"
        android:textColor="@android:color/black"
        kdstextview:rightcolor="@color/grid_border_color"
        android:id="@+id/txtID"
        android:paddingLeft="3dp"
        android:textSize="16dp" />

    <com.bematechus.kdslib.KDSTextview
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ip"
        kdstextview:rightcolor="@color/grid_border_color"
        android:layout_weight="5.5"
        android:textColor="@android:color/black"
        android:id="@+id/txtIP"
        android:gravity="center|left"
        android:paddingLeft="3dp"
        android:textSize="16dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <com.bematechus.kdslib.KDSTextview
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/info"
            kdstextview:rightcolor="@color/grid_border_color"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:id="@+id/txtInfo"
            android:gravity="center|left"
            android:paddingLeft="3dp"
            android:textSize="10dp" />
<!-- style="?android:attr/progressBarStyleHorizontal" -->

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="?android:attr/progressBarStyleSmall"
            android:id="@+id/pbUpdating"
            android:indeterminate="true"
            android:indeterminateOnly="true"
            android:indeterminateBehavior="cycle" />
    </LinearLayout>


</LinearLayout>
